<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/com_facebook_profile_picture_blank_square"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_my_achievements" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_statistics"/>
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
