<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grabble.MainActivity">

    <TextView
        android:text="@string/welcome_to_grabble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        tools:text="Welcome to Grabble"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        tools:text="Go to Map"
        android:enabled="false"
        android:clickable="true"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp" />

    <Button
        android:text="@string/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/user_name_tag"
        android:id="@+id/editText"
        tools:ignore="LabelFor"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/grabble_logo_main"
        android:id="@+id/imageView2"
        android:layout_above="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:contentDescription="@string/main_logo" />

</RelativeLayout>
