<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_words"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grabble.WordsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/type_a_letter"
            android:inputType="text"/>
    </LinearLayout>

    <Button
        android:text="@string/create_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:id="@+id/create_word_button"/>

    <Button
        android:text="@string/show_letters_gathered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3" />

    <Button
        android:text="@string/get_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/get_suggestion_button"/>

    <include layout="@layout/item_divider"/>

    <!--TABLE OF WORDS-->

    <TextView
        android:text="@string/created_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textAlignment="center"
        android:paddingTop="16dp"/>

    <TableLayout
        android:id="@+id/words_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    </TableLayout>

</LinearLayout>


